--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <button class="btn ghost" id="btnEsqueci">Esqueci minha senha/e-mail!</button>
       </div>
 
-      <p class="warning" style="margin-top:8px">Dica: abrir via <strong>http://localhost</strong> (Live Server) melhora permissões de rede.</p>
+      <p class="warning" style="margin-top:8px">Versão: Beta 1.0 <strong>-WKF job</strong> Vector TI.</p>
     </div>
     <aside class="side">
       <div class="brand">
