--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8" />
@@ -22,7 +22,10 @@
     color:var(--text);
     display:grid;place-items:center; padding:24px;
   }
-  .app{width:min(1300px,100%); display:grid; gap:18px;}
+
+  /* ⬇️ AJUSTE: agora ocupa a página toda */
+  .app{width:100%; max-width:none; display:grid; gap:18px;}
+
   .title{text-align:center; line-height:1.2}
   .title h1{margin:.2rem 0;font-size:clamp(22px,4vw,34px)}
   .title p{margin:0;color:var(--muted)}
