--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       <div class="field">
         <label for="cadGate">Senha de liberação do cadastro</label>
         <input id="cadGate" type="password" placeholder="Informe a senha para autorizar o cadastro" />
-        <div class="muted">Incerir senha ADMINSTRATIVA para cadastro ou entre em contato com adm_ti@vectorpropaganda.com.br.</div>
+        <div class="muted">Inserir senha ADMINSTRATIVA para cadastro ou entre em contato com adm_ti@vectorpropaganda.com.br.</div>
       </div>
 
       <div class="actions">
@@ -1490,4 +1490,5 @@
 </script>
 </body>
 </html>
+
 
